[gd_scene load_steps=16 format=3 uid="uid://cm84l7wm4vcvc"]

[ext_resource type="Texture2D" uid="uid://dblncg8maj7lk" path="res://assets/items/checkpoint.png" id="1_kkkad"]
[ext_resource type="Script" path="res://checkpoint/checkpoint.gd" id="1_taoos"]

[sub_resource type="Animation" id="Animation_wyfvx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [26]
}

[sub_resource type="Animation" id="Animation_p4vse"]
resource_name = "appear"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [26]
}

[sub_resource type="Animation" id="Animation_alcjt"]
resource_name = "flag_flap"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_qev04"]
resource_name = "flag_open"
length = 2.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o031d"]
_data = {
"RESET": SubResource("Animation_wyfvx"),
"appear": SubResource("Animation_p4vse"),
"flag_flap": SubResource("Animation_alcjt"),
"flag_open": SubResource("Animation_qev04")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_02ic1"]
animation = &"appear"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_l10k4"]
animation = &"flag_flap"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ssf2e"]
animation = &"flag_open"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vmdqf"]
advance_mode = 2
advance_condition = &"on_trigger"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2ph85"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ea5a1"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_h4cd6"]
states/appear/node = SubResource("AnimationNodeAnimation_02ic1")
states/appear/position = Vector2(350, 107)
states/flag_flap/node = SubResource("AnimationNodeAnimation_l10k4")
states/flag_flap/position = Vector2(729, 136)
states/flag_open/node = SubResource("AnimationNodeAnimation_ssf2e")
states/flag_open/position = Vector2(535, 81)
transitions = ["Start", "appear", SubResource("AnimationNodeStateMachineTransition_vmdqf"), "flag_open", "flag_flap", SubResource("AnimationNodeStateMachineTransition_2ph85"), "appear", "flag_open", SubResource("AnimationNodeStateMachineTransition_ea5a1")]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vsnoo"]
size = Vector2(4, 193)

[node name="Checkpoint" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_taoos")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(13, -32)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("1_kkkad")
hframes = 26
vframes = 3
frame = 26

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o031d")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o031d")
}
tree_root = SubResource("AnimationNodeStateMachine_h4cd6")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/on_trigger = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(43, -96.5)
shape = SubResource("RectangleShape2D_vsnoo")

[node name="Sound" type="AudioStreamPlayer2D" parent="."]

[node name="FlagArrival" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="FlagArrival" to="." method="_on_flag_arrival_timeout"]
